<resources>
    <string name="app_name">Mareu</string>
    <string name="title_reunions_list">Reunion</string>
    <string name="title_reunions_detail">Reunions Detail</string>
    <string name="confirm">Confirmer</string>
    <string name="delete_metting">Supprimer la réunion \"%1$s\"</string>
    <string name="confirm_deleted_metting">Réunion supprimée</string>
    <string name="cancel_deleted_metting">Annulation de la suppression</string>

    <string name="are_you_sure">Etes-vous sûr ?</string>
    <string name="ok">Ok</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="cancel">Annuler</string>
    <string name="sujet">Sujet</string>
    <string name="indent">-</string>
    <string name="date">Date</string>
    <string name="liste_des_participants">Liste des participants</string>
    <string name="floatingAddDescription">Boutton créer une réunion</string>
    <string name="cancel_create_metting">Création de réunion annulée</string>
    <string name="confirm_create_metting">Nouvelle réunion créée</string>
    <string name="menu_item_title_filter_room">Filtrer par salle</string>
    <string name="menu_item_title_filter_date">Filtrer par date</string>
    <string name="menu_item_title_delete_filter">Supprimer le filtre</string>

    <string name="add_metting_title">Ajouter une réunion</string>
    <string name="add_metting_room">Salle</string>
    <string name="add_metting_date">Date</string>
    <string name="add_metting_email">Email participant</string>
    <string name="add_metting_validate">Valider</string>
    <string name="add_metting_validate_hint">Valider la création de la réunion</string>
    <string name="add_metting_cancel_hint">Annuler la création de la réunion</string>
    <string name="add_metting_button_add_email_content_description">button ajouter email</string>
    <string name="bouton_ajouter_description">bouton ajouter</string>
    <string name="pastille_couleur_salle">couleur de la salle</string>
    <string name="salle">Salle</string>

</resources>