...

    <TextView
        android:id="@+id/reunion_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_toStartOf="@+id/button_delete"
        android:layout_toEndOf="@+id/image_rond"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/sujet"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

...
